--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .DS_Store
-.vscode
 package.json
 package-lock.json
 coverage
 node_modules
 archive
 megalinter-reports/
+
+.vscode/*
+!.vscode/extensions.json
