--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -25,3 +25,5 @@ FILEIO_REPORTER: false
 # DISABLE_ERRORS: true
 
 DISABLE_LINTERS: [REPOSITORY_CHECKOV, REPOSITORY_GRYPE]
+
+JAVASCRIPT_DEFAULT_STYLE: prettier
