--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
     "jest-puppeteer": "^6.1.1",
+    "prettier": "3.2.5",
     "puppeteer": "^19.3.0",
     "standard": "^17.0.0"
   },
