--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "babel-jest": "^29.3.1",
-    "jest": "^29.3.1",
+    "jest": "^29.7.0",
     "jest-puppeteer": "^6.1.1",
     "puppeteer": "^19.3.0",
     "standard": "^17.0.0"
@@ -23,5 +23,9 @@
     "env": [
       "jest"
     ]
+  },
+  "dependencies": {
+    "@types/jest": "^29.5.12",
+    "jsdom": "^24.0.0"
   }
 }
