--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -50,3 +50,15 @@ jobs:
         with:
           message-path: "test-results/out"
           allow-repeats: true
+
+# cypress e2e
+cypress-run:
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v3
+    - name: Install dependencies
+      run: npm ci
+    - name: Cypress run
+      uses: cypress-io/github-action@v6
+      with:
+        browser: chrome
