--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "babel-jest": "^29.3.1",
+    "cypress": "^13.10.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-puppeteer": "^6.1.1",
@@ -14,8 +15,10 @@
   "scripts": {
     "test": "jest --verbose",
     "coverage": "jest --collectCoverage --",
-    "ci-test": "jest --ci --verbose", 
-    "ci-coverage": "jest --ci --collectCoverage"
+    "ci-test": "jest --ci --verbose",
+    "ci-coverage": "jest --ci --collectCoverage",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "jest": {
     "preset": "jest-puppeteer",
