--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -55,9 +55,15 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Install dependencies
         run: npm ci
+      - name: Start HTTP server
+        run: npx http-server ./ -p 5500 &
+        
+      - name: Wait for server to be ready
+        run: npx wait-on http://127.0.0.1:5500/index.html
+
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
