--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "@babel/preset-env": "^7.20.2",
     "babel-jest": "^29.3.1",
     "cypress": "^13.10.0",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-puppeteer": "^6.1.1",
     "prettier": "3.2.5",
     "puppeteer": "^19.3.0",
-    "standard": "^17.0.0",
-    "http-server": "^14.0.0"
+    "standard": "^17.0.0"
   },
   "scripts": {
     "test": "jest --verbose",
