--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    name: Jest Test and Code Coverage
+    name: Jest Test 
     runs-on: ubuntu-latest
 
     steps:
@@ -28,28 +28,6 @@ jobs:
       # Run tests
       - name: Unit test
         run: npm run ci-test
-
-      # Run coverage
-      - name: Code coverage
-        run: npm run ci-coverage
-
-      # Push results back into repo
-      #- uses: stefanzweifel/git-auto-commit-action@v4
-      #  with:
-      #    file_pattern: 'test-results/**/*'
-
-      - run: |
-          cat test-results/test > test-results/out
-          cat test-results/coverage >> test-results/out
-
-     # - run: | # this is outdated, someone should uncomment out and fix later
-      #    cat test-results/test > test-results/out
-       #   cat test-results/coverage >> test-results/out
-      
-      - uses: mshick/add-pr-comment@v2
-        with:
-          message-path: "test-results/out"
-          allow-repeats: true
 
   # cypress e2e
   cypress-run:
