--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "babel-jest": "^29.3.1",
-    "jest": "^29.3.1",
+    "cypress": "^13.10.0",
+    "http-server": "^14.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-puppeteer": "^6.1.1",
     "prettier": "3.2.5",
     "puppeteer": "^19.3.0",
@@ -13,16 +16,23 @@
   "scripts": {
     "test": "jest --verbose",
     "coverage": "jest --collectCoverage --",
-    "ci-test": "jest --ci --verbose > test-results/test 2>&1",
-    "ci-coverage": "jest --ci --collectCoverage -- > test-results/coverage 2>&1"
+    "ci-test": "jest --ci --verbose",
+    "ci-coverage": "jest --ci --collectCoverage",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "jest": {
     "preset": "jest-puppeteer",
+    "testEnvironment": "jsdom",
     "verbose": true
   },
   "standard": {
     "env": [
       "jest"
     ]
+  },
+  "dependencies": {
+    "@types/jest": "^29.5.12",
+    "jsdom": "^24.0.0"
   }
 }
