--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -24,6 +24,6 @@ FILEIO_REPORTER: false
 # Uncomment if you want MegaLinter to detect errors but not block CI to pass
 # DISABLE_ERRORS: true
 
-DISABLE_LINTERS: [REPOSITORY_CHECKOV, REPOSITORY_GRYPE]
+DISABLE_LINTERS: [REPOSITORY_CHECKOV, REPOSITORY_GRYPE, REPOSITORY_TRIVY]
 
 JAVASCRIPT_DEFAULT_STYLE: prettier
